--- a/crm_01/crm_common/pom.xml
+++ b/crm_01/crm_common/pom.xml
@@ -13,5 +13,11 @@
     <artifactId>crm_common</artifactId>
     <packaging>jar</packaging>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
