--- a/crm_01/crm_web/pom.xml
+++ b/crm_01/crm_web/pom.xml
@@ -43,6 +43,14 @@
             <groupId>com.kaishengit</groupId>
             <artifactId>crm_service_impl</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper</artifactId>
+        </dependency>
 
     </dependencies>
 
