--- a/crm_01/parent/pom.xml
+++ b/crm_01/parent/pom.xml
@@ -32,7 +32,9 @@
         <servlet-version>3.1.0</servlet-version>
         <jstl-version>1.2</jstl-version>
         <commons-lang-version>3.5</commons-lang-version>
+        <commons-lang3-version>3.4</commons-lang3-version>
         <jackson-version>2.8.7</jackson-version>
+        <guava-version>22.0</guava-version>
 
         <crm_entity_version>1.0-SNAPSHOT</crm_entity_version>
         <crm_mapper_version>1.0-SNAPSHOT</crm_mapper_version>
@@ -135,6 +137,16 @@
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-lang3</artifactId>
                 <version>${commons-lang-version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>${commons-lang3-version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>${guava-version}</version>
             </dependency>
             <dependency>
                 <groupId>com.github.pagehelper</groupId>
