--- a/crm_01/crm_service_impl/pom.xml
+++ b/crm_01/crm_service_impl/pom.xml
@@ -26,6 +26,10 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+        </dependency>
     </dependencies>
 
 
