--- a/crm_01/parent/pom.xml
+++ b/crm_01/parent/pom.xml
@@ -35,6 +35,7 @@
         <commons-lang3-version>3.4</commons-lang3-version>
         <jackson-version>2.8.7</jackson-version>
         <guava-version>22.0</guava-version>
+        <poi-version>3.16</poi-version>
 
         <crm_entity_version>1.0-SNAPSHOT</crm_entity_version>
         <crm_mapper_version>1.0-SNAPSHOT</crm_mapper_version>
@@ -142,6 +143,11 @@
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-lang3</artifactId>
                 <version>${commons-lang3-version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.poi</groupId>
+                <artifactId>poi</artifactId>
+                <version>${poi-version}</version>
             </dependency>
             <dependency>
                 <groupId>com.google.guava</groupId>
