--- a/crm_01/parent/pom.xml
+++ b/crm_01/parent/pom.xml
@@ -33,6 +33,7 @@
         <jstl-version>1.2</jstl-version>
         <commons-lang-version>3.5</commons-lang-version>
         <commons-lang3-version>3.4</commons-lang3-version>
+        <commons-codec-version>1.10</commons-codec-version>
         <jackson-version>2.8.7</jackson-version>
         <guava-version>22.0</guava-version>
         <poi-version>3.16</poi-version>
@@ -137,13 +138,14 @@
             <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-lang3</artifactId>
-                <version>${commons-lang-version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.commons</groupId>
-                <artifactId>commons-lang3</artifactId>
                 <version>${commons-lang3-version}</version>
             </dependency>
+            <dependency>
+                <groupId>commons-codec</groupId>
+                <artifactId>commons-codec</artifactId>
+                <version>${commons-codec-version}</version>
+            </dependency>
+
             <dependency>
                 <groupId>org.apache.poi</groupId>
                 <artifactId>poi</artifactId>
