--- a/crm_01/crm_weixin/src/main/resources/weixin.properties
+++ b/crm_01/crm_weixin/src/main/resources/weixin.properties
@@ -1,3 +1,4 @@
 wx.cropId=wwe51315cdb9f7b8d8
 wx.secret=_U5tzE9Fk_qgC8o4ISKKPInjMWB640CaKNQN7mAKy34
 wx.addressBook.secret=69dBsVkpoynyswrLmRMF0t-_JIA2psZfyeYiynEuuxk
+wx.app.agentId=1000002
